Adds static field to the obejcts
